--- a/www/index.html
+++ b/www/index.html
@@ -18,17 +18,21 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
-    <!-- your app's js -->
-    <script src="js/app.js"></script>
-  </head>
-  <body ng-app="starter">
+    <!-- skycons -->
+    <script src="/lib/skycons/skycons.js"></script>
+    <script src="/lib/angular-skycons/angular-skycons.js"></script>
 
-    <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
-      </ion-header-bar>
-      <ion-content>
-      </ion-content>
-    </ion-pane>
+    <!-- your app's js -->
+    <script src="/js/app.js"></script>
+    <script src="/js/controllers.js"></script>
+  </head>
+  <body ng-app="weather">
+
+    <ion-header-bar class="bar-balanced">
+        <h1 class="title">My Weather App</h1>
+    </ion-header-bar>
+
+    <ion-nav-view></ion-nav-view>
+
   </body>
 </html>
